﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-25 Michal Čihař  <michal@cihar.com>
    * lang/english: "Log in" is correct naming for action (RFE #945440).
    * tbl_properties_operations.php: Allow to change auto_increment for
      InnoDB, supported since MySQL 5.0.3 (bug #1337873).

2005-10-24 Michal Čihař  <michal@cihar.com>
    * tbl_properties_operations.php: Fix changing table attributes, reread new
      parameters after changing them (bug #1290413).
    * main.php: Remove useless isset.
    * lang/czech: Update.

2005-10-23 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: there is already a function to do this
      sort (thanks to Sebastian)
    * tbl_change.php: bug #1334627, do not set NOW() as default function
      when the TIMESTAMP has a default value and does not have the
      ON UPDATE CURRENT TIMESTAMP attribute (phew! repeat this 3 times)

2005-10-21 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: foreign dropdowns: sort id-content by id 
      and content-id by content
    * libraries/common.lib.php: bug #1330847, undefined index connect_type

2005-10-21 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_export.php:
      - replaced for() with foreach()
      - dont pollute $GLOBALS['table']
    * libraries/mysql_charsets.lib.php:
      - make use of mysql variable collation_database
      - fixed call to PMA_DBI_fetch_value() (return second field, not first)
    * libraries/database_interface.lib.php:
      extended function PMA_DBI_get_tables_full():
       - make use of information_schema
       - always fill fields for information_schema and show table status
    * db_details_db_info.php: make use of function PMA_DBI_get_tables_full()
    
2005-10-20 Marc Delisle  <lem9@users.sourceforge.net>
    * server_databases.php: security fix
    * libraries/common.lib.php, /grab_globals.lib.php: security fix
